# Maze

src/: .pylintrc  README.html  README.md  makefile  requirements.txt  setup.cfg
src/app/: requirements.txt  setup.cfg
src/app/backend/mazes/: __init__.py
src/app/backend/mazes/algorithms/generating/: __init__.py  base.py  generating_maze.py
src/app/backend/mazes/algorithms/solutions/: __init__.py  base.py  breadth_first_search.py
src/app/backend/mazes/dto/: __init__.py  maze_data.py  solution_data.py
src/app/backend/mazes/facade/: __init__.py  maze_manager.py
src/app/backend/mazes/file_manager/: __init__.py  loader.py  saver.py
src/app/backend/mazes/validators/: __init__.py  maze.py
src/app/backend/mazes/validators/mazes/: __init__.py  maze.py  solution_path.py
src/app/controller/: __init__.py  maze.py
src/app/frontend/: config.py
src/app/frontend/desktop_app/: __main__.py
src/app/frontend/desktop_app/caves/: __init__.py
src/app/frontend/desktop_app/mazes/: main_window.py  maze_geometry.py  maze_renderer.py  solution_path.py  window_opengl.py
src/app/frontend/desktop_app/ui/: __init__.py  caves_window.py  main_window.py  window_opengl.py
src/app/frontend/desktop_app/ui/ui_qt/: caves_window.ui  main_window.ui
src/app/logger/: __init__.py  config.py
tests/: test_generate.py  test_solution.py
