[metadata]
name = mazes_and_caves
version = 0.1
description = The Maze and Caves program, which allows you to generate and draw perfect mazes and caves

[options]
packages = find:
install_requires =
    annotated-types==0.7.0
    certifi==2024.7.4
    charset-normalizer==3.3.2
    colorama==0.4.6
    contourpy==1.2.1
    cycler==0.12.1
    flake8==7.1.1
    fonttools==4.53.1
    guidata==3.1.0
    guiqwt==4.4.5
    h5py==3.11.0
    idna==3.7
    kiwisolver==1.4.5
    loguru==0.7.2
    mccabe==0.7.0
    numpy==2.0.1
    packaging==24.1
    pillow==10.4.0
    pycodestyle==2.12.1
    pydantic==2.8.2
    pydantic_core==2.20.1
    pyflakes==3.2.0
    PyOpenGL==3.1.7
    pyparsing==3.1.2
    pyqt-tools==1.0.0
    PyQt6==6.7.1
    PyQt6-Qt6==6.7.2
    PyQt6_sip==13.8.0
    PySide6==6.7.2
    PySide6_Addons==6.7.2
    PySide6_Essentials==6.7.2
    python-dateutil==2.9.0.post0
    PythonQwt==0.12.7
    QtPy==2.4.1
    requests==2.32.3
    scipy==1.14.0
    shiboken6==6.7.2
    six==1.16.0
    tomli==2.0.1
    typing_extensions==4.12.2
    urllib3==2.2.2
    win32-setctime==1.1.0

python_requires = >=3.11

[options.entry_points]
console_scripts =
    run-app = frontend.desktop_app.__main__:main
